Fixed mobile scrolling and off center blog

--- a/src/background.css
+++ b/src/background.css
@@ -15,8 +15,8 @@
 
 .background {
     position: fixed;
-    width: 100vw;
-    height: 100vh;
+    width: 125vw;
+    height: 125vh;
     top: 0;
     left: 0;
     margin: 0;
